--- a/events/_fullcalendar.html
+++ b/events/_fullcalendar.html
@@ -1,8 +1,11 @@
-<div class="box box-default">
-<h2>Upcoming Events</h2>
+---
+layout: no-sidebars
+title: Upcoming Events
+---
+
 <ul class="item-list">
 {% for post in site.data.events | sort 'start' | limit:3 %}
-  <li class="event event-{{ forloop.index }}">
+  <li event event-{{ forloop.index }}>
 		<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a><br>
 		{{ post.start | date_to_string }}
   </li>
@@ -11,6 +14,3 @@
 <a class="readmore" href="{{ site.baseurl }}/events">more</a>
 {% endif %}
 </ul>
-{% endif %}
-{% endfor %}
-</div>
