--- a/events/index.html
+++ b/events/index.html
@@ -1,21 +1,13 @@
 ---
-layout: no-sidebars
-title: Upcoming Events
+layout: simpleevent
+title: We’re here to support you into employment
+summary: "Nihil impedit quo minus id quod maxime placea"
 ---
 
-<noscript>
-<div class="calendar-fallback">
-	<ul class="item-list">
-		{% for post in site.data.events | sort 'start'%}
-		<li event event-{{ forloop.index }}>
-			<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a><br>
-			{{ post.start | date_to_string }}
-		</li>
-		{% if forloop.last %}
-	</ul>
-	{% endif %}
-	{% endfor %}
-</div>
-</noscript>
-<div id='calendar'>
-</div>
+<ul>
+	{% for post in site.data.events | sort 'start' %}
+	<li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a><br>{{ post.start | date_to_string }}</li>
+	{% if forloop.last %}
+</ul>
+{% endif %}
+{% endfor %}
