--- a/what-you-can-do.html
+++ b/what-you-can-do.html
@@ -4,14 +4,18 @@ title: What you can do
 summary: "We support young people age 15-24 years old to take steps towards employment"
 ---
 
-{% include teaser.html title="Title" img="/img/thumbnails/placeholder.png" text="text" buttontext="buttontext" content="Testing 123" url="http://www.valonline.org.uk" %}
+{% include teaser.html title="Get Creative" img="/img/thumbnails/placeholder.png" buttontext="buttontext" text="Do you have a passion for all things creative? If so, you can explore lots of exciting creative activities at Soft Touch Arts." url="http://www.valonline.org.uk" %}
 
-{% include teaser.html title="Title" img="/img/thumbnails/placeholder.png" buttontext="buttontext" content="Testing 123" %}
+{% include teaser.html title="Experience the world of Digital Media" img="/img/thumbnails/placeholder.png" text="Learn all you need to know about the world of digital media with Seed Creativity" buttontext="buttontext"  %}
 
-{% include teaser.html title="Title" img="/img/thumbnails/placeholder.png" text="text" buttontext="buttontext" content="Testing 123" %}
+{% include teaser.html title="Explore the world of work" img="/img/thumbnails/placeholder.png" text="Find out what it is like to work, see how different companies operate and all the job roles within them." buttontext="buttontext"  %}
 
-{% include teaser.html title="Title" img="/img/thumbnails/placeholder.png" text="text" buttontext="buttontext" content="Testing 123" %}
+{% include teaser.html title="Get hands on experience and access to jobs" img="/img/thumbnails/placeholder.png" text="Get equipped with the skills, tools, training and confidence you need to secure a job  with The Prince’s Trust." buttontext="buttontext"  %}
 
-{% include teaser.html title="Title" img="/img/thumbnails/placeholder.png" text="text" buttontext="buttontext" content="Testing 123" %}
+{% include teaser.html title="Lead and inspire people like you" img="/img/thumbnails/placeholder.png" text="Learn leadership, decision making and team building skills when you join the YES Youth Leadership Group." buttontext="buttontext"  %}
 
-{% include teaser.html title="Title" img="/img/thumbnails/placeholder.png" text="text" content="Testing 123" %}
+{% include teaser.html title="Start Your Own Business" img="/img/thumbnails/placeholder.png" text="Enhance your business skills and develop your business ideas so that you can create the future you want."  buttontext="buttontext"  %}
+
+{% include teaser.html title="Believe in yourself and achieve" img="/img/thumbnails/placeholder.png" text="TwentyTwenty’s mentoring service can help you to believe in yourself and achieve your education or employment goals."  buttontext="buttontext"  %}
+
+{% include teaser.html title="YES Specialised Support Services" img="/img/thumbnails/placeholder.png" text="You can access YES Specialised Support Services throughout your journey with the YES Project. These services can provide you with the support you need to overcome the barriers that prevent you from getting a job."  buttontext="buttontext"  %}
