--- a/what-you-can-do/index.html
+++ b/what-you-can-do/index.html
@@ -11,9 +11,9 @@ published: true
 
 {% include teaser.html title="Explore the world of work" img="/img/thumbnails/placeholder.png" text="Get a taste for type of job you would like to do in the future with Flying Fish."  url="/what-you-can-do/explore-the-world-of-work" %}
 
-{% include teaser.html title="Get hands on experience and access to jobs" img="/img/thumbnails/placeholder.png" text="Get equipped with the skills, tools, training and con dence you need to secure a job with this programme delivered by Prince’s Trust."  url="/what-you-can-do/get-hands-on-experience-and-access-to-jobs" %}
+{% include teaser.html title="Get hands on experience and access to jobs" img="/img/thumbnails/placeholder.png" text="Get equipped with the skills, tools, training and confidence you need to secure a job. This course is delivered by Prince’s Trust."  url="/what-you-can-do/get-hands-on-experience-and-access-to-jobs" %}
 
-{% include teaser.html title="Get motivated to succeed" img="/img/thumbnails/placeholder.png" text="Learn new skills while improving con dence and self-esteem with the YES Team Programme."  url="/what-you-can-do/lead-and-inspire-people-like-you" %}
+{% include teaser.html title="Get motivated to succeed" img="/img/thumbnails/placeholder.png" text="Learn new skills while improving confidence and self-esteem with the YES Team Programme."  url="/what-you-can-do/lead-and-inspire-people-like-you" %}
 
 {% include teaser.html title="Lead and inspire people like you" img="/img/thumbnails/placeholder.png" text="Learn leadership, decision making and team building skills when you join the YES Youth Leadership Group."  url="/what-you-can-do/lead-and-inspire-people-like-you" %}
 
@@ -21,6 +21,6 @@ published: true
 
 {% include teaser.html title="Start Your Own Business" img="/img/thumbnails/placeholder.png" text="Enhance your business skills and develop your business ideas so that you can create the future you want with the YES Enterprise Team."   url="/what-you-can-do/start-your-own-business" %}
 
-{% include teaser.html title="YES Specialised Support Services" img="/img/thumbnails/placeholder.png" text="The Bridge is a local charity that provides specialist support to help young people accessing the YES Project with issues, such as homelessness, mental health, disabilities or substance abuse."   url="/what-you-can-do/yes-specialised-support-services" %}
+{% include teaser.html title="YES Specialised Support Services" img="/img/thumbnails/placeholder.png" text="Specialist support services for issues such as homelessness, mental health, disabilities or substance abuse are available for you to access with local charity The Bridge"   url="/what-you-can-do/yes-specialised-support-services" %}
 
-{% include teaser.html title="Language and Cultural Support" img="/img/thumbnails/placeholder.png" text="Bangladesh Youth & Cultural Shomiti is a learning provider that hcan help with any language and cultural diffulties you face with achieving a qualification or getting a job ."   url="/what-you-can-do/language-and-cultural-support" %}
+{% include teaser.html title="Language and Cultural Support" img="/img/thumbnails/placeholder.png" text="Bangladesh Youth & Cultural Shomiti can help overcome  any language or cultural challenges you have with learning, qualifications and applying for jobs."   url="/what-you-can-do/language-and-cultural-support" %}
