--- a/what-you-can-do/index.html
+++ b/what-you-can-do/index.html
@@ -17,7 +17,7 @@ published: true
 
 {% include teaser.html title="Lead and inspire people like you" img="/img/thumbnails/placeholder.jpg" text="Learn leadership, decision making and team building skills when you join the YES Youth Leadership Group."  url="/what-you-can-do/lead-and-inspire-people-like-you" %}
 
-{% include teaser.html title="Believe in yourself and achieve" img="/img/thumbnails/placeholder.jpg" text="TwentyTwenty’s mentoring service can help you to believe in yourself and achieve your education or employment goals."   url="/what-you-can-do/believe-in-yourself-and-achieve" %}
+{% include teaser.html title="Achieve in education" img="/img/thumbnails/placeholder.jpg" text="TwentyTwenty’s mentoring service can help you to believe in yourself and achieve your education or employment goals."   url="/what-you-can-do/believe-in-yourself-and-achieve" %}
 
 {% include teaser.html title="Start Your Own Business" img="/img/thumbnails/computers.jpg" text="Enhance your business skills and develop your business ideas so that you can create the future you want with the YES Enterprise Team."   url="/what-you-can-do/start-your-own-business" %}
 
