--- a/what-you-can-do/index.html
+++ b/what-you-can-do/index.html
@@ -9,18 +9,18 @@ published: true
 
 {% include teaser.html title="Experience the world of Digital Media" img="/img/thumbnails/digital-media.jpg" text="Learn all you need to know about the world of digital media with Seed Creativity." url="/what-you-can-do/experience-the-world-of-digital-media"  %}
 
-{% include teaser.html title="Explore the world of work" img="/img/thumbnails/placeholder.jpg" text="Get a taste for type of job you would like to do in the future with Flying Fish."  url="/what-you-can-do/explore-the-world-of-work" %}
+{% include teaser.html title="Explore the world of work" img="/img/thumbnails/retail.jpg" text="Get a taste for type of job you would like to do in the future with Flying Fish."  url="/what-you-can-do/explore-the-world-of-work" %}
 
-{% include teaser.html title="Get hands on experience and access to jobs" img="/img/thumbnails/placeholder.jpg" text="Get equipped with the skills, tools, training and confidence you need to secure a job. This course is delivered by Prince’s Trust."  url="/what-you-can-do/get-hands-on-experience-and-access-to-jobs" %}
+{% include teaser.html title="Get hands on experience and access to jobs" img="/img/thumbnails/engineering.jpg" text="Get equipped with the skills, tools, training and confidence you need to secure a job. This course is delivered by Prince’s Trust."  url="/what-you-can-do/get-hands-on-experience-and-access-to-jobs" %}
 
-{% include teaser.html title="Get motivated to succeed" img="/img/thumbnails/placeholder.jpg" text="Learn new skills while improving confidence and self-esteem with the YES Team Programme."  url="/what-you-can-do/lead-and-inspire-people-like-you" %}
+{% include teaser.html title="Get motivated to succeed" img="/img/thumbnails/outdoors.jpg" text="Learn new skills while improving confidence and self-esteem with the YES Team Programme."  url="/what-you-can-do/lead-and-inspire-people-like-you" %}
 
 {% include teaser.html title="Lead and inspire people like you" img="/img/thumbnails/placeholder.jpg" text="Learn leadership, decision making and team building skills when you join the YES Youth Leadership Group."  url="/what-you-can-do/lead-and-inspire-people-like-you" %}
 
-{% include teaser.html title="Achieve in education" img="/img/thumbnails/placeholder.jpg" text="TwentyTwenty’s mentoring service can help you to believe in yourself and achieve your education or employment goals."   url="/what-you-can-do/believe-in-yourself-and-achieve" %}
+{% include teaser.html title="Achieve in education" img="/img/thumbnails/meeting.jpg" text="TwentyTwenty’s mentoring service can help you to believe in yourself and achieve your education or employment goals."   url="/what-you-can-do/believe-in-yourself-and-achieve" %}
 
 {% include teaser.html title="Start Your Own Business" img="/img/thumbnails/computers.jpg" text="Enhance your business skills and develop your business ideas so that you can create the future you want with the YES Enterprise Team."   url="/what-you-can-do/start-your-own-business" %}
 
-{% include teaser.html title="YES Specialised Support Services" img="/img/thumbnails/placeholder.jpg" text="The Bridge is a local charity that provides specialist support for issues, such as homelessness, mental health, disabilities or substance abuse."   url="/what-you-can-do/yes-specialised-support-services" %}
+{% include teaser.html title="YES Specialised Support Services" img="/img/thumbnails/specialist-support.jpg" text="The Bridge is a local charity that provides specialist support for issues, such as homelessness, mental health, disabilities or substance abuse."   url="/what-you-can-do/yes-specialised-support-services" %}
 
-{% include teaser.html title="Language and Cultural Support" img="/img/thumbnails/placeholder.jpg" text="Bangladesh Youth & Cultural Shomiti can help overcome  any language or cultural challenges you have with learning, qualifications and applying for jobs."   url="/what-you-can-do/language-and-cultural-support" %}
+{% include teaser.html title="Language and Cultural Support" img="/img/thumbnails/cultural-support.jpg" text="Bangladesh Youth & Cultural Shomiti can help overcome  any language or cultural challenges you have with learning, qualifications and applying for jobs."   url="/what-you-can-do/language-and-cultural-support" %}
