--- a/what-you-can-do/index.html
+++ b/what-you-can-do/index.html
@@ -15,11 +15,11 @@ published: true
 
 {% include teaser.html title="Get motivated to succeed" img="/img/thumbnails/outdoors.jpg" text="Learn new skills while improving confidence and self-esteem with the YES Team Programme."  url="/what-you-can-do/lead-and-inspire-people-like-you" %}
 
-{% include teaser.html title="Lead and inspire people like you" img="/img/thumbnails/placeholder.jpg" text="Learn leadership, decision making and team building skills when you join the YES Youth Leadership Group."  url="/what-you-can-do/lead-and-inspire-people-like-you" %}
+{% include teaser.html title="Lead and inspire people like you" img="/img/thumbnails/meeting.jpg" text="Learn leadership, decision making and team building skills when you join the YES Youth Leadership Group."  url="/what-you-can-do/lead-and-inspire-people-like-you" %}
 
-{% include teaser.html title="Achieve in education" img="/img/thumbnails/meeting.jpg" text="TwentyTwenty’s mentoring service can help you to believe in yourself and achieve your education or employment goals."   url="/what-you-can-do/believe-in-yourself-and-achieve" %}
+{% include teaser.html title="Achieve in education" img="/img/thumbnails/computers.jpg" text="TwentyTwenty’s mentoring service can help you to believe in yourself and achieve your education or employment goals."   url="/what-you-can-do/believe-in-yourself-and-achieve" %}
 
-{% include teaser.html title="Start Your Own Business" img="/img/thumbnails/computers.jpg" text="Enhance your business skills and develop your business ideas so that you can create the future you want with the YES Enterprise Team."   url="/what-you-can-do/start-your-own-business" %}
+{% include teaser.html title="Start Your Own Business" img="/img/thumbnails/retail-2.jpg" text="Enhance your business skills and develop your business ideas so that you can create the future you want with the YES Enterprise Team."   url="/what-you-can-do/start-your-own-business" %}
 
 {% include teaser.html title="YES Specialised Support Services" img="/img/thumbnails/specialist-support.jpg" text="The Bridge is a local charity that provides specialist support for issues, such as homelessness, mental health, disabilities or substance abuse."   url="/what-you-can-do/yes-specialised-support-services" %}
 
