CTA and new course dates page

--- a/_course-dates/index.html
+++ b/_course-dates/index.html
@@ -1,5 +1,5 @@
 ---
-layout: simpleevent
+layout: default
 title: We’re here to support you into employment
 summary: "Nihil impedit quo minus id quod maxime placea"
 ---
