--- a/what-you-can-do/index.html
+++ b/what-you-can-do/index.html
@@ -21,6 +21,5 @@ published: true
 
 {% include teaser.html title="Start Your Own Business" img="/img/thumbnails/retail-2.jpg" text="Enhance your business skills and develop your business ideas so that you can create the future you want with the YES Enterprise Team."   url="/what-you-can-do/start-your-own-business" %}
 
-{% include teaser.html title="YES Specialised Support Services" img="/img/thumbnails/specialist-support.jpg" text="The Bridge is a local charity that provides specialist support for issues, such as homelessness, mental health, disabilities or substance abuse."   url="/what-you-can-do/yes-specialised-support-services" %}
+{% include teaser.html title="YES Specialised Support Services" img="/img/thumbnails/specialist-support.jpg" text="YES specialist support services can provide you with the support you need to overcome the barriers that prevent you from getting a job."   url="/what-you-can-do/yes-specialised-support-services" %}
 
-{% include teaser.html title="Language and Cultural Support" img="/img/thumbnails/cultural-support.jpg" text="Bangladesh Youth & Cultural Shomiti can help overcome  any language or cultural challenges you have with learning, qualifications and applying for jobs."   url="/what-you-can-do/language-and-cultural-support" %}
