--- a/what-you-can-do/index.html
+++ b/what-you-can-do/index.html
@@ -5,15 +5,15 @@ summary: We support young people age 15-24 years old to take steps towards emplo
 published: true
 ---
 
-{% include teaser.html title="Get Creative" img="/img/thumbnails/get-creative.jpg"  text="Do you have a passion for all things creative? If so, you can explore lots of exciting creative activities at Soft Touch Arts." url="/what-you-can-do/get-creative" %}
+{% include teaser.html title="Get Creative" img="/img/thumbnails/get-creative-thumbnail.jpg"  text="Do you have a passion for all things creative? If so, you can explore lots of exciting creative activities at Soft Touch Arts." url="/what-you-can-do/get-creative" %}
 
-{% include teaser.html title="Experience the world of Digital Media" img="/img/thumbnails/digital-media.jpg" text="Learn all you need to know about the world of digital media with Seed Creativity." url="/what-you-can-do/experience-the-world-of-digital-media"  %}
+{% include teaser.html title="Experience the world of Digital Media" img="/img/thumbnails/yes-media-thumbnail.jpg" text="Learn all you need to know about the world of digital media with Seed Creativity." url="/what-you-can-do/experience-the-world-of-digital-media"  %}
 
-{% include teaser.html title="Explore the world of work" img="/img/thumbnails/retail.jpg" text="Get a taste for type of job you would like to do in the future with Flying Fish."  url="/what-you-can-do/explore-the-world-of-work" %}
+{% include teaser.html title="Explore the world of work" img="/img/thumbnails/explore-the-world-of-work-thumbnail.jpg" text="Get a taste for type of job you would like to do in the future with Flying Fish."  url="/what-you-can-do/explore-the-world-of-work" %}
 
 {% include teaser.html title="Get hands on experience and access to jobs" img="/img/thumbnails/engineering.jpg" text="Get equipped with the skills, tools, training and confidence you need to secure a job. This course is delivered by Prince’s Trust."  url="/what-you-can-do/get-hands-on-experience-and-access-to-jobs" %}
 
-{% include teaser.html title="Get motivated to succeed" img="/img/thumbnails/outdoors.jpg" text="Learn new skills while improving confidence and self-esteem with the YES Team Programme."  url="/what-you-can-do/get-motivated-to-succeed" %}
+{% include teaser.html title="Get motivated to succeed" img="/img/thumbnails/get-motivated-to-succeed-thumbnail.jpg" text="Learn new skills while improving confidence and self-esteem with the YES Team Programme."  url="/what-you-can-do/get-motivated-to-succeed" %}
 
 {% include teaser.html title="Lead and inspire people like you" img="/img/thumbnails/meeting.jpg" text="Learn leadership, decision making and team building skills when you join the YES Youth Leadership Group."  url="/what-you-can-do/lead-and-inspire-people-like-you" %}
 
