--- a/what-you-can-do/index.html
+++ b/what-you-can-do/index.html
@@ -11,6 +11,8 @@ published: true
 
 {% include teaser.html title="Explore the world of work" img="/img/thumbnails/explore-the-world-of-work-thumbnail.jpg" text="Get a taste for type of job you would like to do in the future with Flying Fish."  url="/what-you-can-do/explore-the-world-of-work" %}
 
+{% include teaser.html title="Enhance your employability" img="img/thumbnails/cultural-support.jpg" text="Improve your work chances by gaining an accredited qualification."  url="what-you-can-do/language-and-cultural-support" %}
+
 {% include teaser.html title="Get hands on experience and access to jobs" img="/img/thumbnails/engineering.jpg" text="Get equipped with the skills, tools, training and confidence you need to secure a job. This course is delivered by Prince’s Trust."  url="/what-you-can-do/get-hands-on-experience-and-access-to-jobs" %}
 
 {% include teaser.html title="Get motivated to succeed" img="/img/thumbnails/get-motivated-to-succeed-thumbnail.jpg" text="Learn new skills while improving confidence and self-esteem with the YES Team Programme."  url="/what-you-can-do/get-motivated-to-succeed" %}
@@ -22,4 +24,3 @@ published: true
 {% include teaser.html title="Start Your Own Business" img="/img/thumbnails/retail-2.jpg" text="Enhance your business skills and develop your business ideas so that you can create the future you want with the YES Enterprise Team."   url="/what-you-can-do/start-your-own-business" %}
 
 {% include teaser.html title="YES Specialised Support Services" img="/img/thumbnails/specialist-support.jpg" text="YES specialist support services can provide you with the support you need to overcome the barriers that prevent you from getting a job."   url="/what-you-can-do/yes-specialised-support-services" %}
-
