--- a/what-you-can-do/index.html
+++ b/what-you-can-do/index.html
@@ -11,7 +11,7 @@ published: true
 
 {% include teaser.html title="Explore the world of work" img="/img/thumbnails/explore-the-world-of-work-thumbnail.jpg" text="Get a taste for type of job you would like to do in the future with Flying Fish."  url="/what-you-can-do/explore-the-world-of-work" %}
 
-{% include teaser.html title="Enhance your employability" img="/img/thumbnails/cultural-support.jpg" text="Improve your work chances by gaining an accredited qualification."  url="/what-you-can-do/enhance-your-employability" %}
+{% include teaser.html title="Enhance your employability" img="/img/thumbnails/cultural-support.jpg" text="Improve your work chances by gaining an accredited qualification with Bangladesh Youth and Cultural Shomiti."  url="/what-you-can-do/enhance-your-employability" %}
 
 {% include teaser.html title="Get hands on experience and access to jobs" img="/img/thumbnails/engineering.jpg" text="Get equipped with the skills, tools, training and confidence you need to secure a job. This course is delivered by Prince’s Trust."  url="/what-you-can-do/get-hands-on-experience-and-access-to-jobs" %}
 
