Update boost PAGE

--- a/yes-films.html
+++ b/yes-films.html
@@ -1,8 +1,7 @@
 ---
 layout: videos
 title: Yes Films
-summary: >-
-  Take a look at the YES Film collection to find out more about the YES Project. Many of the films have been created by young people on the YES Media course.
+summary: Film page
 published: true
 ---
 
