--- a/what-you-can-do/boost.html
+++ b/what-you-can-do/boost.html
@@ -2,7 +2,9 @@
 layout: boost
 title: Learn how to make money from Social Media
 summary: >-
-  Social Boost is a company formed by the YES Project to give 15-24 years olds the experience and skills required to run their own social media company.
+  Learn how to make money from social media Social Boost is a company formed by
+  the YES Project to give 15-24 years olds the experience and skills required to
+  run their own social media company.
 published: true
 permalink: /boost/
 ---
