--- a/what-you-can-do/index.html
+++ b/what-you-can-do/index.html
@@ -5,7 +5,7 @@ summary: We support young people age 15-24 years old to take steps towards emplo
 published: true
 ---
 
-{% include teaser.html title="Social Boost" img="/img/thumbnails/social-boost-thumbnail.png"  text="Social Boost is a company formed by the YES Project to give 15-24 years olds the experience and skills required to run their own social media company." url="/boost" %}
+{% include teaser.html title="Social Boost" img="/img/thumbnails/social-boost-thumbnail.png"  text="  Learn how to make money from social media by joining Social Boost. This 3-month enterprise programme will give you the experience and skills to run your own social media company." url="/boost" %}
 
 {% include teaser.html title="Get Creative" img="/img/thumbnails/get-creative-thumbnail.jpg"  text="Do you have a passion for all things creative? If so, you can explore lots of exciting creative activities at Soft Touch Arts." url="/what-you-can-do/get-creative" %}
 
