--- a/what-you-can-do/index.html
+++ b/what-you-can-do/index.html
@@ -5,7 +5,7 @@ summary: We support young people age 15-24 years old to take steps towards emplo
 published: true
 ---
 
-{% include teaser.html title="Social Boost" img="/img/thumbnails/social-boost-thumbnail.png"  text="Learn how you can make money from social media. Join Social Boost to gain skills and experience to start your own social media company." url="/boost" %}
+{% include teaser.html title="Become a Booster" img="/img/thumbnails/social-boost-thumbnail.png"  text="Learn how you can make money from social media. Join Social Boost to gain skills and experience to start your own social media company." url="/boost" %}
 
 {% include teaser.html title="Get Creative" img="/img/thumbnails/get-creative-thumbnail.jpg"  text="Do you have a passion for all things creative? If so, you can explore lots of exciting creative activities at Soft Touch Arts." url="/what-you-can-do/get-creative" %}
 
