--- a/what-you-can-do/boost.html
+++ b/what-you-can-do/boost.html
@@ -14,13 +14,13 @@ permalink: /boost/
 <div>
     <div>
 <h2>Join Social Boost and become a Booster!</h2>
-<p class="introtext">Social Boost is a company formed by the YES Project to give 15-24 years olds the experience and skills required to run their own social media company.</p>
-<h3>As a Booster:</h3>
+<p class="introtext">Social Boost is a company formed by YES Enterprise to give 15-24 years olds the experience and skills required to run their own social media company.</p>
+<h3>Your mission as a Booster:</h3>
 <ul>
 <li>You will learn how to use Social Media in a professional way</li>
-<li>Learn about the different platforms</li>
-<li>Gain tips and tricks</li>
-<li>Learn how to create a Digital Marketing Strategy</li>
+<li>Learn about the different platforms and gain tips and tricks</li>
+<li>Boost your entrepreneurial and sales skills</li>
+<li>Learn how to plan a Social Media campaign</li>
 <li>Take over the Social Media platforms for a real business</li>
 <li>Help a local business boost their social media presence.</li>
 <li>Look into starting up your own business in Social Media!</li>
