--- a/what-you-can-do/boost.html
+++ b/what-you-can-do/boost.html
@@ -14,10 +14,10 @@ permalink: /boost/
 <div>
     <div>
 <h2>Join Social Boost and become a Booster!</h2>
-<p class="introtext">Social Boost is a company formed by YES Enterprise to give 15-24 years olds the experience and skills required to run their own social media company.</p>
+<p class="introtext">Social Boost is a company formed by the YES Project to give 15-24 years olds the experience and skills required to run their own social media company.</p>
 <h3>Your mission as a Booster:</h3>
 <ul>
-<li>You will learn how to use Social Media in a professional way</li>
+<li>Learn how to use Social Media in a professional way</li>
 <li>Learn about the different platforms and gain tips and tricks</li>
 <li>Boost your entrepreneurial and sales skills</li>
 <li>Learn how to plan a Social Media campaign</li>
