--- a/what-you-can-do/boost.html
+++ b/what-you-can-do/boost.html
@@ -14,7 +14,7 @@ permalink: /boost/
 <div>
     <div>
 <h2>Join Social Boost and become a Booster!</h2>
-<p class="introtext">Social Boost is a company formed by the YES Project to give 15-24 years olds the experience and skills required to run their own social media company.</p>
+<p class="introtext">Social Boost is a company formed by the YES Project to give NEET* 15-24 years olds the experience and skills required to run their own social media company.</p>
 <h3>Your mission as a Booster:</h3>
 <ul>
 <li>Learn how to use Social Media in a professional way</li>
@@ -27,6 +27,7 @@ permalink: /boost/
 </ul>
 </div>
 </div>
+  *Not in employment, education or training
 </div>
 </section>
 <section class="band" id="boostfooter">
