--- a/what-you-can-do/boost.html
+++ b/what-you-can-do/boost.html
@@ -14,7 +14,7 @@ permalink: /boost/
 <div>
     <div>
 <h2>Join Social Boost and become a Booster!</h2>
-<p class="introtext">Social Boost is a company formed by the YES Project to give NEET* 15-24 years olds the experience and skills required to run their own social media company.</p>
+<p class="introtext">Social Boost is a company formed by the YES Project to give  15-24 years olds not in education or employment, the experience and skills required to run their own social media company. </p>
 <h3>Your mission as a Booster:</h3>
 <ul>
 <li>Learn how to use Social Media in a professional way</li>
@@ -25,7 +25,6 @@ permalink: /boost/
 <li>Help a local business boost their social media presence.</li>
 <li>Look into starting up your own business in Social Media!</li>
 </ul>
-*Not in employment, education or training
 </div>
 </div>
 </div>
